--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,15 @@ python = "^3.11"
 httpx = {extras = ["http2"], version = "^0.26.0"}
 lxml = "^5.1.0"
 requests = "^2.31.0"
+pydantic = "^2.6.4"
+jinja2 = "^3.1"
+ruamel-yaml = "^0.18.6"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1"
 black = "^23.3"
 ruff = "^0.0"
-pytest = "^7.3"
-pytest-asyncio = "^0.23"
+pytest = "^8.1.1"
 
 [tool.pytest.ini_options]
 python_files = ["tests.py", "test_*.py", "*_tests.py"]
