--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ requests = "^2.31.0"
 pydantic = "^2.6.4"
 jinja2 = "^3.1"
 ruamel-yaml = "^0.18.6"
+odfdo = "^3.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1"
